@@ -26,6 +26,7 @@ typedef enum
     ECE_RC_SUCCESS = 0,
     ECE_RC_BADPARAMS,
     ECE_RC_NOMEM,
+    ECE_RC_BADCONFIG,
     ECE_RC_NOLICENSE,
     ECE_RC_CONNECT,
     ECE_RC_BADAUTH,
